--- a/_posts/2020-08-19-안드로이드에-대해서.md
+++ b/_posts/2020-08-19-안드로이드에-대해서.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: Title of Your Post
-canonical_url: "https://yoursite.com/custom-canonical-url"
+canonical_url: "https://www.naver.com/"
 ---
 
 테스트
