gem 기반 설치 테스트

--- a/_posts/2020-08-19-안드로이드에-대해서2.md
+++ b/_posts/2020-08-19-안드로이드에-대해서2.md
@@ -7,6 +7,8 @@ tags:
 title:  "안드로이드에 대해서"
 ---
 
+잘 반영되나?? 
+
 ## 안드로이드에 대해서
  - 프레임워크와 라이브러리 차이를 설명할 수 있다.
  - `new Activity()` 코드가 왜 없는지에 대해 설명할 수 있다.
